--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -685,7 +685,7 @@ h6 {
   bottom: 0px;
   left: 0px;
   right: 0px;
-
+  background-color: #fff;
   z-index: 1;
 }
 .overlay_effect:before {
@@ -874,7 +874,6 @@ body.loaded .overlay_effect:after {
 .shane_tm_about .right {
   width: 50%;
   padding-left: 50px;
-  
 }
 .shane_tm_title {
   width: 100%;
@@ -905,7 +904,6 @@ body.loaded .overlay_effect:after {
   float: left;
   margin-bottom: 40px;
   padding-top: 27px;
-  text-align: justify;
 }
 .shane_tm_button {
   width: 100%;
@@ -1156,7 +1154,6 @@ body.loaded .overlay_effect:after {
 .shane_tm_skills .text {
   padding-top: 27px;
   float: left;
-  text-align: justify;
 }
 .tokyo_progress {
   width: 100%;
@@ -1445,7 +1442,6 @@ body.loaded .overlay_effect:after {
 }
 .shane_tm_testimonials .right .texts p {
   margin-bottom: 40px;
-  text-align: justify;
 }
 .shane_tm_testimonials .right .author {
   width: 100%;
@@ -1479,9 +1475,6 @@ body.loaded .overlay_effect:after {
   opacity: 1;
   transition: all 1s 0.3s ease;
   transform: scale(1) translateZ(0);
-}
-.hooper-track {
-  align-items: baseline;
 }
 .shane_tm_testimonials .right .short {
   padding-left: 25px;
@@ -1699,7 +1692,6 @@ body.modal {
 }
 .shane_tm_modalbox_news .description p {
   margin-bottom: 15px;
-  text-align: justify;
 }
 .shane_tm_modalbox_news .description blockquote {
   font-style: italic;
@@ -2878,9 +2870,7 @@ body.dark .shane_tm_settings .cursor li .svg,
   .shane_tm_testimonials .right {
     padding-left: 0px;
     width: 100%;
-    text-align: justify;
   }
- 
   .shane_tm_news .news_list ul li {
     width: 50%;
   }
