--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -645,7 +645,7 @@ h6 {
 .shane_tm_hero .content h3 {
   position: relative;
   font-size: 72px;
-  font-family: "Montserrat";
+  font-family: "Roboto";
   text-transform: uppercase;
   font-weight: 900;
   color: #000;
@@ -685,7 +685,7 @@ h6 {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  background-color: #fff;
+
   z-index: 1;
 }
 .overlay_effect:before {
