timeline and portfolio

--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -2691,6 +2691,14 @@ body.dark .shane_tm_settings .cursor li .svg,
 .shane_tm_intro .demo_list ul li .list_inner:hover {
   top: -10px;
 }
+.shane_tm_experience .experience_list{
+  width: 100%;
+    height: auto;
+    clear: both;
+    float: left;
+    padding-top: 90px;
+}
+
 .shane_tm_intro .demo_list ul li .list_inner h3 {
   font-size: 20px;
   font-weight: 600;
