--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -495,7 +495,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 25px 50px;
+  padding: 20px 50px 0px 50px;
   transition: all 0.3s ease;
 }
 .is-fixed .topbar_inner {
@@ -686,7 +686,6 @@ h6 {
   bottom: 0px;
   left: 0px;
   right: 0px;
-
   z-index: 1;
 }
 .overlay_effect:before {
@@ -706,6 +705,7 @@ body.loaded .overlay_effect:before {
 body.loaded .overlay_effect:after {
   animation: anim2 2s cubic-bezier(0.77, 0, 0.175, 1) both;
 }
+
 
 @keyframes anim {
   0% {
